syntax = "proto3";

package orders;

option go_package = "github.com/leta/order-management-system/orders";

import "google/protobuf/timestamp.proto";

// Service for managing orders
service Orders {
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}

    // Products
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
    rpc GetProduct (GetProductRequest) returns (GetProductResponse) {}
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse) {}
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse) {}
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse) {}

    // Customers
    rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse) {}
    rpc GetCustomer (GetCustomerRequest) returns (GetCustomerResponse) {}
    rpc ListCustomers (ListCustomersRequest) returns (ListCustomersResponse) {}
    rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerResponse) {}
    rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse) {}

    // Orders
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {}
    rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {}
    rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {}
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse) {}
    rpc ProcessCheckout (ProcessCheckoutRequest) returns (ProcessCheckoutResponse) {}

    // Order Items
    rpc CreateOrderItem (CreateOrderItemRequest) returns (CreateOrderItemResponse) {}
    rpc GetOrderItem (GetOrderItemRequest) returns (GetOrderItemResponse) {}
    rpc ListOrderItems (ListOrderItemsRequest) returns (ListOrderItemsResponse) {}
    rpc UpdateOrderItem (UpdateOrderItemRequest) returns (UpdateOrderItemResponse) {}
    rpc DeleteOrderItem (DeleteOrderItemRequest) returns (DeleteOrderItemResponse) {}
}

// Message for the health check request
message HealthCheckRequest {}

// Message for the health check response
message HealthCheckResponse {
    string status = 1;
}

// Message representing a product
message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    uint32 price = 4;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for creating a product
message CreateProductRequest {
    string name = 1;
    string description = 2;
    uint32 price = 3;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Response message for creating a product
message CreateProductResponse {
    string id = 1;
}

// Request message for getting a product
message GetProductRequest {
    string id = 1;
}

// Response message for getting a product
message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    uint32 price = 4;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for listing products
message ListProductsRequest {}

// Response message for listing products
message ListProductsResponse {
    repeated Product products = 1;
}

// Message for updating product attributes
message ProductUpdate {
    string name = 1;
    string description = 2;
    uint32 price = 3;
}

// Request message for updating a product
message UpdateProductRequest {
    string id = 1;
    ProductUpdate update = 2;
}

// Response message for updating a product
message UpdateProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    uint32 price = 4;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for deleting a product
message DeleteProductRequest {
    string id = 1;
}

// Response message for deleting a product
message DeleteProductResponse {
    string id = 1;
}

// Message representing a customer
message Customer {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for creating a customer
message CreateCustomerRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Response message for creating a customer
message CreateCustomerResponse {
    string id = 1;
}

// Request message for getting a customer
message GetCustomerRequest {
    string id = 1;
}

// Response message for getting a customer
message GetCustomerResponse {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for listing customers
message ListCustomersRequest {}

// Response message for listing customers
message ListCustomersResponse {
    repeated Customer customers = 1;
}

// Message for updating customer attributes
message CustomerUpdate {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
}

// Request message for updating a customer
message UpdateCustomerRequest {
    string id = 1;
    CustomerUpdate update = 2;
}

// Response message for updating a customer
message UpdateCustomerResponse {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for deleting a customer
message DeleteCustomerRequest {
    string id = 1;
}

// Response message for deleting a customer
message DeleteCustomerResponse {
    string id = 1;
}

// Enum representing the status of an order
enum OrderStatus {
    NEW = 0;
    PENDING = 1;
    PROCESSING = 2;
    PAID = 3;
    CANCELLED = 4;
    FAILED = 5;
    UNKNOWN = -1;
}

// Message representing an order
message Order {
    string id = 1;
    string customer_id = 2;
    repeated OrderItem order_items = 3;
    OrderStatus status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Request message for creating an order
message CreateOrderRequest {
    string customer_id = 1;
    repeated OrderItem order_items = 2;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

// Response message for creating an order
message CreateOrderResponse {
    string id = 1;
}

// Request message for getting an order
message GetOrderRequest {
    string id = 1;
}

// Response message for getting an order
message GetOrderResponse {
    string id = 1;
    string customer_id = 2;
    repeated OrderItem order_items = 3;
    OrderStatus status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Request message for listing orders
message ListOrdersRequest {}

// Response message for listing orders
message ListOrdersResponse {
    repeated Order orders = 1;
}

// Request message for updating the status of an order
message UpdateOrderStatusRequest {
    string id = 1;
    OrderStatus status = 2;
}

// Response message for updating the status of an order
message UpdateOrderStatusResponse {
    string id = 1;
    string customer_id = 2;
    OrderStatus status = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

// Request message for deleting an order
message DeleteOrderRequest {
    string id = 1;
}

// Response message for deleting an order
message DeleteOrderResponse {
    string id = 1;
}

// Message representing an order item
message OrderItem {
    string id = 1;
    string order_id = 2;
    string product_id = 3;
    uint32 quantity = 4;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for creating an order item
message CreateOrderItemRequest {
    string order_id = 1;
    string product_id = 2;
    int32 quantity = 3;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// Response message for creating an order item
message CreateOrderItemResponse {
    string id = 1;
}

// Request message for getting an order item
message GetOrderItemRequest {
    string id = 1;
    string order_id = 2;
}

// Response message for getting an order item
message GetOrderItemResponse {
    string id = 1;
    string order_id = 2;
    string product_id = 3;
    uint32 quantity = 4;
    repeated OrderItem order_items = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for listing order items
message ListOrderItemsRequest {
    string order_id = 1;
}

// Response message for listing order items
message ListOrderItemsResponse {
    repeated OrderItem order_items = 1;
}

// Message for updating order item attributes
message OrderItemUpdate {
    uint32 quantity = 3;
}

// Request message for updating an order item
message UpdateOrderItemRequest {
    string id = 1;
    string order_id = 2;
    OrderItemUpdate update = 3;
}

// Response message for updating an order item
message UpdateOrderItemResponse {
    string id = 1;
    string order_id = 2;
    string product_id = 3;
    uint32 quantity = 4;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

// Request message for deleting an order item
message DeleteOrderItemRequest {
    string id = 1;
    string order_id = 2;
}

// Response message for deleting an order item
message DeleteOrderItemResponse {
    string id = 1;
}

// Request message for processing a checkout
message ProcessCheckoutRequest {
    string order_id = 1;
}

// Response message for processing a checkout
message ProcessCheckoutResponse {
    string order_id = 1;
    string customer_id = 2;
    OrderStatus status = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    repeated OrderItem order_items = 6;
}
